--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ h1 {
 canvas {
     border: 1px solid #fff;
     background-color: #fff;
+    margin-right: auto; margin-left: auto; display: block; 
 }
 
 .tools {
