--- a/style.css
+++ b/style.css
@@ -78,3 +78,18 @@ button:hover {
     transform: translateX(-50%);
     z-index: 1; 
 }
+
+.tools button {
+    padding: 5px;
+    margin: 5px;
+    background-color: #f0f0f0;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+  }
+  
+  .tools button img {
+    width: 20px; /* Ajuste o tamanho conforme necessário */
+    height: 20px;
+    margin-right: 5px; /* Espaço entre a imagem e o texto */
+  }
+  
