--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ canvas {
     background-color: #fff;
     margin: 0 auto; 
     display: block;
-    box-shadow: 0 0 1000px rgba(1200, 255, 255, 0.5); /* Adicione uma sombra ao redor do canvas */
+    box-shadow: 0 0 1000px rgba(1281, 801,801, 0.9); /* Adicione uma sombra ao redor do canvas */
 }
 
 
