--- a/style.css
+++ b/style.css
@@ -80,3 +80,27 @@ button:hover {
     width: 10%; /* Garante que a imagem preencha o botão */
     height: 10%;
 }
+
+.color-picker-container {
+    position: relative;
+    display: inline-block;
+}
+
+#colorPickerBtn {
+    background: none;
+    border: none;
+    padding: 0;
+    cursor: pointer;
+}
+
+#colorPickerBtn img {
+    width: 24px; /* Ajuste conforme necessário */
+    height: 24px; /* Ajuste conforme necessário */
+}
+
+#colorPicker {
+    position: absolute;
+    top: 100%; /* Posiciona abaixo do botão */
+    left: 0;
+    z-index: 1; /* Garante que o seletor de cores fique sobre o canvas se necessário */
+}
