--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
     height: 100vh;
     margin: 0;
     background-color: #000;
-    color: #fff;
+    color: #000;
     font-family: 'Arial', sans-serif;
 }
 
@@ -23,7 +23,7 @@ h1 {
 
 canvas {
     border: 1px solid #fff; 
-    background-color: #181616;
+    background-color: #fff;
     display: block;
     box-shadow: 0 0 20px rgba(255, 255, 255, 0.5); /* Melhor sombra para o canvas */
     margin: 0 auto; 
