--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
     height: 100vh;
     margin: 0;
     background-color: #000;
-    color: #000;
+    color: #fff;
     font-family: 'Arial', sans-serif;
 }
 
